# groot

./: .gintrc  .gitignore  CMakeLists.txt  Readme.md  doClean.sh  doMake.sh  make  makefile
GRUTinizer/: .grut_history  .grut_thread
GRUTinizer/histos/: ANLCalHistos.cxx  ANLMakeHistos.cxx  MakeHistosInBeam.cxx
GRUTinizer/include/: GH1.h  GH1D.h  GH2D.h  GRootBrowser.h  TCalibrator.h  TCluster.h  TGretinaHit.h  TGretinaHit.h.pcb  TRuntimeObjects.h
GRUTinizer/libraries/GROOT/: GH1.cxx  GH1D.cxx  GH2.cxx  GH2D.cxx
GRUTinizer/libraries/TDetSystems/TGretina/: TGretinaHit.cxx  TGretinaHit.cxx.pcb
GRUTinizer/libraries/TGRUTUtil/: TCalibrator.cxx
GRUTinizer/libraries/THistogramming/: TRuntimeObjects.cxx
GRUTinizer/libraries/TLoops/: TFilterLoop.cxx
GRUTinizer/util/: MakeCalFile.C
docs/: manual.txt
icons/: bld_cut.xpm  folder_s.xpm  folder_t.xpm  graph.xpm  h1_t.xpm  h2_t.xpm  hdb_s.xpm  hdb_t.xpm  marker4.xpm  rootdb_t.xpm  selection_t.xpm  ttree_t.xpm
include/: GCanvas.h  GCommands.h  GEventHandler.h  GEventTimer.h  GF1.h  GFunctions.h  GG.h  GGaus.h  GGlobals.h  GH1D.h  GH2D.h  GListTree.h  GMarker.h  GNucleus.h  GObjectManager.h  GPeak.h  GPeak2.h  GROI.h  GTransition.h  GUtils.h  Gint.h  Gtypes.h  Histomatic.h  globals.h  myClass.h  utils.h
libraries/: CMakeLists.txt
libraries/GNucleus/: CMakeLists.txt  GNucleus.cxx  GTransition.cxx
libraries/GObjectManager/: CMakeLists.txt  GObjectManager.cxx  GObjectManagerLinkdef.h
libraries/GRoot/: CMakeLists.txt  GCanvas.cxx  GCommands.cxx  GEventHandler.cxx  GF1.cxx  GFunctions.cxx  GGaus.cxx  GGlobals.cxx  GH1D.cxx  GH2D.cxx  GMarker.cxx  GPeak.cxx  GPeak2.cxx  GROI.cxx  GRootCommands.cxx  GUtils.cxx  LinkDef.h
libraries/GTools/: CMakeLists.txt  GNucleus.cxx  Linkdef.h
libraries/GUI/: CMakeLists.txt  GEventTimer.cxx  GG.cxx  GListTree.cxx  Histomatic.cxx  Linkdef.h
libraries/Gint/: CMakeLists.txt  Gint.cxx
libraries/Histomatic/: CMakeLists.txt  GG.cxx  Histomatic.cxx  Linkdef.h
libraries/myClass/: CMakeLists.txt  myClass.cxx  myClassLinkdef.h
scripts/: calGraph.c  docal.c  get_nndc_data.py  graph1.c  makeGraph.c
src/: groot.cxx  rootGUI.cxx  rootGUI.cxx.bak
